--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -13,30 +13,13 @@
 # 5. Select your web app or create one
 # 6. Copy the config values below
 
-VITE_FIREBASE_API_KEY=AIzaSyCXS-5FG3gFkQLVSK4uoi52vpZohBmHM2Q
-VITE_FIREBASE_AUTH_DOMAIN=fluid-advantage-476915-h9.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=fluid-advantage-476915-h9
-VITE_FIREBASE_STORAGE_BUCKET=fluid-advantage-476915-h9.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=262016580577
-VITE_FIREBASE_APP_ID=1:262016580577:web:519765c697da7b9afff0a0
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
 
 # Backend API Configuration (Production)
 # Update this with your Cloud Run service URL after backend deployment
-VITE_API_BASE_URL=https://invoice-platform-backend-262016580577.us-central1.run.app/
-
-# ---------------------------
-# Backend API Configuration
-# ---------------------------
-# Backend API base URL
-# Development: http://localhost:8000
-# Production: https://your-backend-url.run.app
-VITE_API_BASE_URL=http://localhost:8000
-
-# -------
-# Notes
-# -------
-# For production deployment:
-# 1. Copy this file to .env.production
-# 2. Update VITE_API_BASE_URL with your Cloud Run backend URL
-# 3. Verify all Firebase config values match your production project
-# 4. Build with: npm run build (automatically uses .env.production)
+VITE_API_BASE_URL=
