Add DocumentAI API

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,6 +36,32 @@ STORAGE_BUCKET_NAME=your-project-id-invoices
 # Firestore database name (use "(default)" for the default database)
 FIRESTORE_DATABASE=(default)
 
+# -----------------------
+# Document AI Configuration
+# -----------------------
+# Document AI project ID (usually same as GCP_PROJECT_ID)
+DOCUMENT_AI_PROJECT_ID=your-project-id
+
+# Document AI processor location (us or eu)
+DOCUMENT_AI_LOCATION=us
+
+# Document AI processor ID for invoice processing
+# Create processor at: https://console.cloud.google.com/ai/document-ai/processors
+# Use processor type: INVOICE_PROCESSOR
+DOCUMENT_AI_PROCESSOR_ID=your-processor-id
+
+# Enable/disable Document AI (set to false to use only Tesseract)
+DOCUMENT_AI_ENABLED=true
+
+# -----------------------
+# OCR Configuration
+# -----------------------
+# OCR processing mode: document_ai, tesseract, or auto
+# - document_ai: Use only Document AI
+# - tesseract: Use only Tesseract OCR
+# - auto: Try Document AI first, fallback to Tesseract on failure
+OCR_MODE=auto
+
 # ---------------------------
 # Application Configuration
 # ---------------------------
