--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -49,7 +49,7 @@ steps:
       - '--concurrency'
       - '80'
       - '--set-env-vars'
-      - 'GCP_PROJECT_ID=$PROJECT_ID,GCP_REGION=us-central1,STORAGE_BUCKET_NAME=$PROJECT_ID-invoices,ENVIRONMENT=production,LOG_LEVEL=INFO,FIRESTORE_DATABASE=(default),MAX_FILE_SIZE_MB=10,ALLOWED_FILE_TYPES=application/pdf,SIGNED_URL_EXPIRATION_HOURS=1'
+      - 'GCP_PROJECT_ID=$PROJECT_ID,GCP_REGION=us-central1,STORAGE_BUCKET_NAME=$PROJECT_ID-invoices,ENVIRONMENT=production,LOG_LEVEL=INFO,FIRESTORE_DATABASE=(default),MAX_FILE_SIZE_MB=10,ALLOWED_FILE_TYPES=application/pdf,SIGNED_URL_EXPIRATION_HOURS=1,DOCUMENT_AI_PROJECT_ID=$PROJECT_ID,DOCUMENT_AI_LOCATION=us,DOCUMENT_AI_ENABLED=false,OCR_MODE=tesseract'
       - '--set-secrets'
       - 'FIREBASE_SERVICE_ACCOUNT_SECRET=firebase-service-account:latest'
       - '--service-account'
