--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ google-cloud-storage==2.14.0
 google-cloud-firestore==2.14.0
 google-cloud-logging==3.9.0
 google-cloud-secret-manager==2.18.0
+google-cloud-documentai==2.20.0
 
 # PDF Processing
 pdfplumber==0.10.3
