--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,8 +12,10 @@ google-cloud-secret-manager==2.18.0
 google-cloud-documentai==2.20.0
 
 # PDF Processing
-pdfplumber==0.10.3
-PyPDF2==3.0.1
+pdfminer.six==20221105
+
+# AI/LLM
+openai==1.12.0
 
 # Data Validation
 pydantic==2.5.3
